--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset='utf-8' >
   <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no">
-  <meta name="title" content="Popit">
+  <meta name="title" content="поп ыт">
   <meta name="description" content="действущий онлайн поп ыт">
   <meta name="keywords" content="Поп ыт">
   <meta property="og:type" content="website">
