--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta property="og:image:height" content="500">
   <meta property="og:url" content="">
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="">
-  <meta property="twitter:title" content="Popit">
+  <meta property="twitter:url" content="https://andreygorbockon.github.io/pop-it/">
+  <meta property="twitter:title" content="поп ыт">
   <meta property="twitter:description" content="действущий онлайн поп ыт">
   <meta property="twitter:image" content="https://telegra.ph/file/9c3d197cd60f0a2e74a38.jpg">
   <title>
