--- a/index.html
+++ b/index.html
@@ -336,7 +336,15 @@
       </div>
     </div>
     </div>
-   
+    <div style="display: none;" class='buttons-container'> 
+      <div class='button-container'> 
+        <button class="reset-button" id="reset">Очистить</button> 
+      </div> 
+      <div class='scores'> 
+        <span>Нажатий: </span><span id='score-value'>0</span> 
+      </div> 
+    </div> 
+  </section> 
   </section>
   <script src="scripts/main.js?q=6"></script>
 </body>
